k8s/castilla/prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-dep
  namespace: castilla-p5
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus:latest
        args:
          - "--config.file=/etc/prometheus/prom.yml"
          - "--storage.tsdb.path=/prometheus/"
        ports:
        - containerPort: 9090
        volumeMounts:
        # Aquí "montamos" el ConfigMap dentro del contenedor como si fuera un fichero
        - name: config-volume
          mountPath: /etc/prometheus/
      volumes:
      - name: config-volume
        configMap:
          name: prometheus-config

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-svc
  namespace: castilla-p5
spec:
  type: NodePort
  selector:
    app: prometheus
  ports:
    - protocol: TCP
      port: 20000
      targetPort: 9090
      nodePort: 30008
