k8s/castilla/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-castilla
  namespace: castilla-p5
spec:
  rules:
  - host: castilla.monitor.es 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-svc
            port:
              number: 20000
